--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ dist/
 .DS_Store
 *.log
 .claude/
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
