--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "github-actions-monitor",
-  "version": "1.0.0",
-  "description": "A desktop application for monitoring GitHub Actions workflow runs across all your repositories",
+  "name": "gitview",
+  "version": "2.0.0",
+  "description": "A comprehensive GitHub desktop client for monitoring Actions, managing repositories, pull requests, issues, and more",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -12,34 +12,51 @@
     "github",
     "actions",
     "monitor",
-    "electron"
+    "electron",
+    "desktop",
+    "git",
+    "repository"
   ],
-  "author": "",
+  "author": "Select Technology",
   "license": "MIT",
   "devDependencies": {
     "electron": "^33.0.0",
     "electron-builder": "^25.1.8"
   },
   "dependencies": {
-    "auto-launch": "^5.0.6"
+    "auto-launch": "^5.0.6",
+    "axios": "^1.6.0",
+    "date-fns": "^3.0.0",
+    "diff2html": "^3.4.47",
+    "dotenv": "^16.6.1",
+    "electron-store": "^8.1.0",
+    "express": "^4.18.2",
+    "lodash": "^4.17.21",
+    "marked": "^12.0.0",
+    "simple-git": "^3.22.0"
   },
   "build": {
     "appId": "com.select-technology.github-actions-monitor",
-    "productName": "GitHub Actions Monitor",
+    "productName": "GitView",
     "win": {
-      "target": ["portable", "nsis"]
+      "target": [
+        "portable",
+        "nsis"
+      ]
     },
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true,
-      "shortcutName": "GitHub Actions Monitor"
+      "shortcutName": "GitView"
     },
     "files": [
       "main.js",
       "preload.js",
-      "index.html"
+      "index.html",
+      "index-new.html",
+      "src/**/*"
     ]
   }
 }
